refactor: 자동차 전진 기능 1. Car: 캡슐화를 위해 자동차 전진 로직 리팩토링 2. RacingModel: 캡슐화를 위해 자동차 전진 로직 리팩토링